Fixed spacing of sidenav and added divider.

--- a/UI/src/components/NavBar/NavBar.scss
+++ b/UI/src/components/NavBar/NavBar.scss
@@ -69,7 +69,7 @@
 
     &--active {
       border-left: 5px solid $icon-nav-active;
-      box-sizing: border-box;
+      width: calc(100% - 5px);
 
       & .nav-bar__icon {
         color: $icon-nav-active;
@@ -154,8 +154,15 @@
 
     &__item {
       height: 40px;
-      margin-bottom: 10px;
+      margin-bottom: 24px;
       text-align: center;
+    }
+
+    &__divider {
+      width: 30px;
+      height: 1px;
+      background-color: $icon-nav-inactive;
+      margin: 0 auto 24px auto;
     }
 
     &__link {
